[package]
name = "blu"
version = "0.1.0"
edition = "2021"
authors = ["0skar16"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0.0"
glob = "0.3.1"
home = "0.5.5"
nom = "7"
serde = { version = "1.0.165", features = ["derive"] }
serde_yaml = "0.9.22"
walkdir = "2.3.3"
